Fix spacing

--- a/site/public/assets/style.css
+++ b/site/public/assets/style.css
@@ -238,7 +238,7 @@ code {
  */
 
 .content {
-  margin: 0 auto;
+  margin: 56px auto;
   max-width: 712px;
   padding: 0 16px;
 }
